<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/illustrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="1.5dp"
        android:text="@string/illustrate"
        />

    <Button
        android:id="@+id/app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onStartOtherCameraApp"
        android:text="@string/way_other_app"
        app:layout_constraintTop_toBottomOf="@+id/illustrate"
        />

    <Button
        android:id="@+id/api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onInvokeSystemApi"
        android:text="@string/way_system_api"
        app:layout_constraintTop_toBottomOf="@+id/app"
        />

</android.support.constraint.ConstraintLayout>